--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
     "@types/node": "^17.0.31"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "multer": "^1.4.4"
   },
   "scripts": {
     "start": "node server.js"
