--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nanoid": "^3.3.4"
   },
   "scripts": {
     "start": "node server.js"
