--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ logs
 files
 .DS_Store
 *.log
+associations.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -12,6 +13,7 @@ lerna-debug.log*
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Runtime data
+associations.json
 pids
 *.pid
 *.seed
